// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Avatar component will render correctly for user with absolute avatar URL 1`] = `
"<p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="32px" height="32px" alt="" src="https://example.com/users/dave/avatar">
  <!--v-if-->
</p>"
`;

exports[`User Avatar component will render correctly for user with relative avatar URL 1`] = `
"<p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="128px" height="128px" alt="" src="/api/users/Dave_Tests/avatar/128x128">
  <!--v-if-->
</p>"
`;

exports[`User Avatar component will render initials for user without avatar URL but with username 1`] = `
"<p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="32px" height="32px" alt="" src="https://ui-avatars.com/api/?name=Test%20User">
  <!--v-if-->
</p>"
`;

exports[`User Avatar component will url-encode value of display name when necessary 1`] = `
"<p class="rounded-full bg-link flex gap-2 items-center"><img class="rounded-full" width="32px" height="32px" alt="" src="https://ui-avatars.com/api/?name=%40TestUser_69%3F%3F">
  <!--v-if-->
</p>"
`;
